Fix loading getting stuck

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -85,30 +85,6 @@ body {
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
-[v-cloak] > * {
-  display: none;
-}
-[v-cloak]::before {
-  background-color: black;
-}
-
-.loading {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #090909;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-}
-.loading svg {
-  width: 100px;
-  height: 100px;
-  margin: 20px;
-  display: inline-block;
-}
 
 @media screen and (max-width: 821px) {
   .info-trailer-container {
